--- a/meetngo/templates/index.html
+++ b/meetngo/templates/index.html
@@ -19,6 +19,7 @@
     <div id="map_main"></div>
 
     <script>
+        window.meetngo.events = {{ events|safe }};
     </script>
 
 {% endblock %}
