--- a/meetngo/templates/layout.html
+++ b/meetngo/templates/layout.html
@@ -12,6 +12,7 @@
             <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
             <script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
             <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+            <script src="http://momentjs.com/downloads/moment.min.js" charset="utf-8"></script>
             <script>
                 var False = false, True = true;
             </script>
