--- a/meetngo/templates/index.html
+++ b/meetngo/templates/index.html
@@ -16,6 +16,12 @@
 
     <h1>MeetNGO</h1>
 
+    <div style="margin-bottom: 20px">
+        <input name="organization" type="text">
+        <input name="date" type="text">
+        <button id="search">Chercher un event</button>
+    </div>
+
     <div id="map_main"></div>
 
     <script>
